name:                   hla-fed-parser
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <james.cook@usma.edu>
maintainer:             James Cook <james.cook@usma.edu>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               I'm too lame to describe my project
description:            I'm too lame to describe my project

Library
  hs-source-dirs:       src
  exposed-modules:      Codec.FedFile
  other-modules:        Codec.FedFile.Stage1
                        Codec.FedFile.Stage2
  build-depends:        base >= 4 && <5, containers, sexpr >= 0.3, mtl
